--- a/abm.html
+++ b/abm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html class="cye-disabled cye-nm"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>Prototype_019</title>
+	<title>Agent Based Modeling JS</title>
 	<style type="text/css">
 		canvas{
 			border: 1px solid black;
